train extra models (combining positive and negative examples, bigger images...), sampling examples and performing experiments with opencv to clean results

--- a/experiments/taming_transformers/data_generation_and_aug.ipynb
+++ b/experiments/taming_transformers/data_generation_and_aug.ipynb
@@ -107,7 +107,7 @@
     "id": "YQ9Kd8wP0BOY"
    },
    "source": [
-    "### Preprocesando imágenes de moléculas organometálicas de la Universidad de Neguev (articles_molecules)"
+    "### Preprocesando imágenes de moléculas organometálicas y los contraejemplos de la Universidad de Neguev (articles_molecules)"
    ]
   },
   {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "executionInfo": {
      "elapsed": 4,
@@ -155,18 +155,78 @@
    "outputs": [],
    "source": [
     "def resize_with_padding(img, required_size):\n",
-    "  img.thumbnail((required_size, required_size))\n",
-    "  delta_w = required_size - img.size[0]\n",
-    "  delta_h = required_size - img.size[1]\n",
-    "  pad_w = delta_w // 2\n",
-    "  pad_h = delta_h // 2\n",
-    "  padding = (pad_w, pad_h, delta_w - pad_w, delta_h - pad_h)\n",
-    "  return ImageOps.expand(img, padding, fill=(255,255,255))"
+    "    img.thumbnail((required_size, required_size))\n",
+    "    delta_w = required_size - img.size[0]\n",
+    "    delta_h = required_size - img.size[1]\n",
+    "    pad_w = delta_w // 2\n",
+    "    pad_h = delta_h // 2\n",
+    "    padding = (pad_w, pad_h, delta_w - pad_w, delta_h - pad_h)\n",
+    "    return ImageOps.expand(img, padding, fill=(255,255,255))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "source": [
+    "def apply_resize(images_path, preprocess_folder=\"preprocess\", required_size=192):\n",
+    "    preprocess_folder = preprocess_folder + \"/\"\n",
+    "    filenames = glob.glob(images_path+\"*.png\")\n",
+    "    os.makedirs(images_path+preprocess_folder, exist_ok=True)\n",
+    "\n",
+    "    for filename in filenames:\n",
+    "      img = Image.open(filename)\n",
+    "      width, height = img.size\n",
+    "      img = resize_with_padding(img, required_size)\n",
+    "\n",
+    "      img.convert(\"RGB\").save(images_path+preprocess_folder+filename.split(\"/\")[-1].replace(\"png\",\"jpg\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": 4,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "def gen_metadata(directory):\n",
+    "    directory = directory+\"/\"\n",
+    "    filenames = glob.glob(directory+\"*.jpg\")\n",
+    "    train, test = train_test_split(filenames, test_size=0.25, random_state=42)\n",
+    "\n",
+    "    with open(directory+\"xx_train.txt\", \"w\") as f:\n",
+    "        for filename in train[:-1]:\n",
+    "            f.write(filename+\"\\n\")\n",
+    "        f.write(train[-1])\n",
+    "\n",
+    "    with open(directory+\"xx_test.txt\", \"w\") as f:\n",
+    "        for filename in test[:-1]:\n",
+    "            f.write(filename+\"\\n\")\n",
+    "        f.write(test[-1])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "192x192 molecules"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "executionInfo": {
      "elapsed": 64852,
@@ -184,22 +244,39 @@
    "outputs": [],
    "source": [
     "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
-    "filenames = glob.glob(images_path+\"*.png\")\n",
-    "\n",
-    "os.makedirs(images_path+\"preprocess/\", exist_ok=True)\n",
-    "\n",
-    "required_size = 192\n",
-    "for filename in filenames:\n",
-    "  img = Image.open(filename)\n",
-    "  width, height = img.size\n",
-    "  img = resize_with_padding(img, required_size)\n",
-    "  \n",
-    "  img.convert(\"RGB\").save(images_path+\"preprocess/\"+filename.split(\"/\")[-1].replace(\"png\",\"jpg\"))"
+    "apply_resize(images_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "preprop_images_path = images_path+\"preprocess/\"\n",
+    "gen_metadata(preprop_images_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "256x256 molecules"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "executionInfo": {
      "elapsed": 7,
@@ -216,14 +293,13 @@
    },
    "outputs": [],
    "source": [
-    "preprop_images_path = images_path+\"preprocess/\"\n",
-    "filenames = glob.glob(preprop_images_path+\"*.jpg\")\n",
-    "train, test = train_test_split(filenames, test_size=0.25, random_state=42)"
+    "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
+    "apply_resize(images_path, \"preprocess256/\", 256)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "executionInfo": {
      "elapsed": 813,
@@ -240,16 +316,126 @@
    },
    "outputs": [],
    "source": [
-    "with open(preprop_images_path+\"xx_train.txt\", \"w\") as f:\n",
-    "  for filename in train[:-1]:\n",
-    "    f.write(filename+\"\\n\")\n",
-    "  f.write(train[-1])\n",
-    "\n",
-    "with open(preprop_images_path+\"xx_test.txt\", \"w\") as f:\n",
-    "  for filename in test[:-1]:\n",
-    "    f.write(filename+\"\\n\")\n",
-    "  f.write(test[-1])"
+    "preprop_images_path = images_path+\"preprocess256/\"\n",
+    "gen_metadata(preprop_images_path)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "256x256 contraejemplos"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "images_path = \"../../../datasets/negev/not_molecules/\"\n",
+    "apply_resize(images_path, \"preprocess256/\", 256)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "preprop_images_path = images_path+\"preprocess256/\"\n",
+    "gen_metadata(preprop_images_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "720x720 moleculas"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
+    "apply_resize(images_path, \"preprocess720/\", 720)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [],
+   "source": [
+    "preprop_images_path = images_path+\"preprocess720/\"\n",
+    "gen_metadata(preprop_images_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "720x720 contraejemplos"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "images_path = \"../../../datasets/negev/not_molecules/\"\n",
+    "apply_resize(images_path, \"preprocess720/\", 720)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "preprop_images_path = images_path+\"preprocess720/\"\n",
+    "gen_metadata(preprop_images_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -262,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {
     "executionInfo": {
      "elapsed": 1301,
@@ -325,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {
     "executionInfo": {
      "elapsed": 217909,
@@ -347,11 +533,10 @@
     "from sklearn.model_selection import train_test_split\n",
     "import cv2\n",
     "\n",
-    "def aug(directory, aug_seq, repeat=2):\n",
+    "def aug(directory, directory_aug, aug_seq, repeat=2):\n",
     "  ia.seed(1)\n",
-    "  images_path = \"../../../datasets/negev/articles_molecules/\"\n",
-    "  preprop_images_path = images_path+\"preprocess/\"\n",
-    "  filenames = glob.glob(preprop_images_path+\"*.jpg\")\n",
+    "  directory = directory + \"/\"\n",
+    "  filenames = glob.glob(directory+\"*.jpg\")\n",
     "\n",
     "  images = []\n",
     "  for filename in filenames:\n",
@@ -360,33 +545,43 @@
     "\n",
     "  augmented_images = images + aug_seq(images=images*repeat)\n",
     "\n",
-    "  os.makedirs(preprop_images_path+directory, exist_ok=True)\n",
+    "  os.makedirs(directory+directory_aug, exist_ok=True)\n",
     "  count = 0\n",
     "  for img in augmented_images:\n",
-    "    cv2.imwrite(preprop_images_path+directory+\"/\"+str(count)+\".jpg\", img)\n",
-    "    count += 1\n",
-    "\n",
-    "def gen_metadata(directory):\n",
-    "  images_path = \"../../../datasets/negev/articles_molecules/\"\n",
-    "  preprop_images_path = images_path+\"preprocess/\"\n",
-    "  preprop_aug_images_path = preprop_images_path+directory+\"/\"\n",
-    "  filenames = glob.glob(preprop_aug_images_path+\"*.jpg\")\n",
-    "  train, test = train_test_split(filenames, test_size=0.25, random_state=42)\n",
-    "\n",
-    "  with open(preprop_aug_images_path+\"xx_train.txt\", \"w\") as f:\n",
-    "    for filename in train[:-1]:\n",
-    "      f.write(filename+\"\\n\")\n",
-    "    f.write(train[-1])\n",
-    "\n",
-    "  with open(preprop_aug_images_path+\"xx_test.txt\", \"w\") as f:\n",
-    "    for filename in test[:-1]:\n",
-    "      f.write(filename+\"\\n\")\n",
-    "    f.write(test[-1])"
+    "    cv2.imwrite(directory+directory_aug+\"/\"+str(count)+\".jpg\", img)\n",
+    "    count += 1"
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "192x192 images"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
+   "outputs": [],
+   "source": [
+    "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
+    "preprop_images_path = images_path+\"preprocess/\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {
     "executionInfo": {
      "elapsed": 6,
@@ -403,36 +598,251 @@
    },
    "outputs": [],
    "source": [
-    "aug(\"aug\", augmentation_seq, repeat=2)\n",
-    "gen_metadata(\"aug\")"
+    "aug(preprop_images_path, \"aug\", augmentation_seq, repeat=2)\n",
+    "gen_metadata(preprop_images_path+\"aug\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aug(\"aug2\", augmentation_seq_2, repeat=3)\n",
-    "gen_metadata(\"aug2\")"
+    "aug(preprop_images_path, \"aug2\", augmentation_seq_2, repeat=3)\n",
+    "gen_metadata(preprop_images_path+\"aug2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aug(\"aug3\", augmentation_seq_3, repeat=3)\n",
-    "gen_metadata(\"aug3\")"
+    "aug(preprop_images_path, \"aug3\", augmentation_seq_3, repeat=3)\n",
+    "gen_metadata(preprop_images_path+\"aug3\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "256x256 images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
+    "preprop_images_path = images_path+\"preprocess256/\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "aug(preprop_images_path, \"aug2\", augmentation_seq_2, repeat=3)\n",
+    "gen_metadata(preprop_images_path+\"aug2\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "720x720 images"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
+    "preprop_images_path = images_path+\"preprocess720/\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [],
+   "source": [
+    "aug(preprop_images_path, \"aug2\", augmentation_seq_2, repeat=3)\n",
+    "gen_metadata(preprop_images_path+\"aug2\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Combinando moléculas organometálicas y contraejemplos en un mismo directorio"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Concretamente, vamos a combinar los resultados de articles_molecules/preprocess256/aug2 con not_molecules/preprocess256. Así obtendremos un dataset balanceado entre ejemplos positivos y negativos"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "positive_filenames = glob.glob(\"../../../datasets/negev/articles_molecules/preprocess256/aug2/\"+\"*.jpg\")\n",
+    "negative_filenames = glob.glob(\"../../../datasets/negev/not_molecules/preprocess256/\"+\"*.jpg\")\n",
+    "\n",
+    "combined_filenames = positive_filenames + negative_filenames"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "new_directory = \"../../../datasets/negev/combined/256\"\n",
+    "os.makedirs(new_directory+\"/\", exist_ok=True)\n",
+    "\n",
+    "for i, filename in enumerate(combined_filenames):\n",
+    "    img = cv2.imread(filename)\n",
+    "    cv2.imwrite(new_directory+\"/\"+str(i)+\".jpg\", img)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "gen_metadata(new_directory)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Ahora con 720x720"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [],
+   "source": [
+    "positive_filenames = glob.glob(\"../../../datasets/negev/articles_molecules/preprocess720/aug2/\"+\"*.jpg\")\n",
+    "negative_filenames = glob.glob(\"../../../datasets/negev/not_molecules/preprocess720/\"+\"*.jpg\")\n",
+    "\n",
+    "combined_filenames = positive_filenames + negative_filenames"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [],
+   "source": [
+    "new_directory = \"../../../datasets/negev/combined/720\"\n",
+    "os.makedirs(new_directory+\"/\", exist_ok=True)\n",
+    "\n",
+    "for i, filename in enumerate(combined_filenames):\n",
+    "    img = cv2.imread(filename)\n",
+    "    cv2.imwrite(new_directory+\"/\"+str(i)+\".jpg\", img)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [],
+   "source": [
+    "gen_metadata(new_directory)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
