report introduction improved, use biblatex as bibliography manager

--- a/report/bibliografia/bibliografia.bib
+++ b/report/bibliografia/bibliografia.bib
@@ -20,7 +20,12 @@
 
 @article{despa2014comparative,
   title={Comparative study on software development methodologies},
-  author={Despa, Mihai Liviu}
+  author={Despa, Mihai Liviu},
+  journal={Database Systems Journal},
+  volume={5},
+  number={3},
+  pages={37--56},
+  year={2014}
 }
 
 @incollection{schwaber1997scrum,
@@ -30,13 +35,4 @@
   pages={117--134},
   year={1997},
   publisher={Springer}
-}
-
-
-% A partir de aquí, páginas web:
-
-@misc{metodologiasDesarrollo,
-  title = {Metodologías de desarrollo de software: ¿qué son?},
-  howpublished = {\url{https://www.becas-santander.com/es/blog/metodologias-desarrollo-software.html}},
-  note = {Accedido: 04-03-2022}
 }
