report cheminformatics state of the art

--- a/report/bibliografia/bibliografia.bib
+++ b/report/bibliografia/bibliografia.bib
@@ -36,3 +36,28 @@
   year={1997},
   publisher={Springer}
 }
+
+@article{Krenn_2020,
+	doi = {10.1088/2632-2153/aba947},
+	url = {https://doi.org/10.1088%2F2632-2153%2Faba947},
+	year = 2020,
+	month = {oct},
+	publisher = {{IOP} Publishing},
+	volume = {1},
+	number = {4},
+	pages = {045024},
+	author = {Mario Krenn and Florian Häse and AkshatKumar Nigam and Pascal Friederich and Alan Aspuru-Guzik},
+	title = {Self-referencing embedded strings ({SELFIES}): A 100{\%} robust molecular string representation},
+	journal = {Machine Learning: Science and Technology}
+}
+
+@article{weininger1988smiles,
+  title={SMILES, a chemical language and information system. 1. Introduction to methodology and encoding rules},
+  author={Weininger, David},
+  journal={Journal of chemical information and computer sciences},
+  volume={28},
+  number={1},
+  pages={31--36},
+  year={1988},
+  publisher={ACS Publications}
+}
