--- a/report/proyecto.tex
+++ b/report/proyecto.tex
@@ -200,8 +200,10 @@ pdfproducer = {pdflatex}
 \setlength{\parskip}{5pt}
 
 \input{capitulos/01_Introduccion}
-%
+
 \input{capitulos/02_Planificacion.tex}
+
+\input{capitulos/04_Estado_del_arte.tex}
 %
 %\input{capitulos/02_EspecificacionRequisitos}
 %
