--- a/report/bibliografia/webs.bib
+++ b/report/bibliografia/webs.bib
@@ -41,3 +41,38 @@
   url = {https://es.wikipedia.org/wiki/Estereoqu%C3%ADmica},
   urldate = {2022-04-21}
 }
+
+@online{smiles_wikipedia,
+  title = {Simplified molecular-input line-entry system},
+  author = "Wikipedia",
+  url = {https://en.wikipedia.org/wiki/Simplified_molecular-input_line-entry_system},
+  urldate = {2022-04-24}
+}
+
+@online{molfile_example,
+  title = {Anatomy of a MOL file},
+  author = "Robert Belford",
+  url = {https://chem.libretexts.org/Courses/University_of_Arkansas_Little_Rock/ChemInformatics_(2017)%3A_Chem_4399_5399/2.2%3A_Chemical_Representations_on_Computer%3A_Part_II/2.2.2%3A_Anatomy_of_a_MOL_file},
+  urldate = {2022-04-26}
+}
+
+@online{pubchem,
+  title = {PubChem Docs - About PubChem},
+  author = "National Institute of Health (NIH)",
+  url = {https://pubchemdocs.ncbi.nlm.nih.gov/about},
+  urldate = {2022-04-26}
+}
+
+@online{aromaticidad,
+  title = {¿Qué es la aromaticidad?},
+  author = "curiosoando.com",
+  url = {https://curiosoando.com/que-es-la-aromaticidad},
+  urldate = {2022-04-25}
+}
+
+@online{aromaticidad_wikipedia,
+  title = {Aromaticidad},
+  author = "Wikipedia",
+  url = {https://es.wikipedia.org/wiki/Aromaticidad},
+  urldate = {2022-04-25}
+}
