--- a/experiments/taming_transformers/data_generation_and_aug.ipynb
+++ b/experiments/taming_transformers/data_generation_and_aug.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "executionInfo": {
      "elapsed": 696,
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "executionInfo": {
      "elapsed": 4,
@@ -185,12 +185,12 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 4,
+   "execution_count": 14,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "def gen_metadata(directory):\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "executionInfo": {
      "elapsed": 64852,
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "preprop_images_path = images_path+\"preprocess/\"\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "executionInfo": {
      "elapsed": 7,
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "executionInfo": {
      "elapsed": 813,
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "images_path = \"../../../datasets/negev/not_molecules/\"\n",
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "preprop_images_path = images_path+\"preprocess256/\"\n",
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "preprop_images_path = images_path+\"preprocess384/\"\n",
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {
     "executionInfo": {
      "elapsed": 1301,
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {
     "executionInfo": {
      "elapsed": 217909,
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {
     "executionInfo": {
      "elapsed": 6,
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "aug(preprop_images_path, \"aug2\", augmentation_seq_2, repeat=3)\n",
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
@@ -650,11 +650,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "aug(preprop_images_path, \"aug2\", augmentation_seq_2, repeat=3)\n",
     "gen_metadata(preprop_images_path+\"aug2\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "256x256 contraejemplos"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [],
+   "source": [
+    "images_path = \"../../../datasets/negev/not_molecules/\"\n",
+    "preprop_images_path = images_path + \"preprocess256/\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [],
+   "source": [
+    "aug(preprop_images_path, \"aug2\", augmentation_seq_2, repeat=2)\n",
+    "gen_metadata(preprop_images_path + \"aug2\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -686,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "outputs": [],
    "source": [
     "positive_filenames = glob.glob(\"../../../datasets/negev/articles_molecules/preprocess256/aug2/\"+\"*.jpg\")\n",
@@ -703,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "new_directory = \"../../../datasets/negev/combined/256\"\n",
@@ -722,11 +761,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "gen_metadata(new_directory)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
